ROS2_WS/log/build_2022-01-15_23-23-20/my_python_pkg/stdout_stderr.log
running egg_info
writing ../../build/my_python_pkg/my_python_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/my_python_pkg/my_python_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/my_python_pkg/my_python_pkg.egg-info/entry_points.txt
writing requirements to ../../build/my_python_pkg/my_python_pkg.egg-info/requires.txt
writing top-level names to ../../build/my_python_pkg/my_python_pkg.egg-info/top_level.txt
reading manifest file '../../build/my_python_pkg/my_python_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/my_python_pkg/my_python_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying my_python_pkg/my_first_python_node.py -> /mnt/d/Programming/ROS2/ROS2_WS/build/my_python_pkg/build/lib/my_python_pkg
running install
running install_lib
copying /mnt/d/Programming/ROS2/ROS2_WS/build/my_python_pkg/build/lib/my_python_pkg/my_first_python_node.py -> /mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/python3.8/site-packages/my_python_pkg
byte-compiling /mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/python3.8/site-packages/my_python_pkg/my_first_python_node.py to my_first_python_node.cpython-38.pyc
  File "/mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/python3.8/site-packages/my_python_pkg/my_first_python_node.py", line 15
    self.get_logger().info("Hello " str(self.counter_))
                                    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/python3.8/site-packages/my_python_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/my_python_pkg/my_python_pkg.egg-info to /mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/python3.8/site-packages/my_python_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing python_node script to /mnt/d/Programming/ROS2/ROS2_WS/install/my_python_pkg/lib/my_python_pkg
writing list of installed files to '/mnt/d/Programming/ROS2/ROS2_WS/build/my_python_pkg/install.log'
